--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Product preview card component</title>
 
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-  <main>
+  <main class="container">
     <div class="grid">
       <div class="img">
         <img src="images/image-product-desktop.jpg" alt="Error Loading Image">
@@ -23,13 +24,14 @@
         <h2 class="pro-name">Gabrielle Essence Eau De Parfum</h2>
         <p class="pro-des"> A floral, solar and voluptuous interpretation composed by Olivier Polge,
           Perfumer-Creator for the House of CHANEL.</p>
+
         <div class="price">
           <p class="current-price">$149.99</p>
           <div class="old-price">$169.99</div>
         </div>
-        <button class="cta"><img src="images/icon-cart.svg" alt="Error Loading"></button>
-
+        <button class="cta"><img src="images/icon-cart.svg" alt="">Add to Cart</button>
       </div>
+
     </div>
   </main>
 
